fabrik/internal/engine/testdata/hook_bad_param.txt
Setup hook parameters are context or config only; provider types move to start.
-- go.mod --
module app

go 1.26
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- web/web.go --
package web

import "net/http"

type Dep struct{}

//fabrik:provider
func NewDep() *Dep { return &Dep{} }

//fabrik:hook setup
func BadSetup(d *Dep) {}

type Handlers struct {
	Dep *Dep
}

//fabrik:http GET /
func (h *Handlers) Index(w http.ResponseWriter, r *http.Request) {}
-- want/diags --
error: web/web.go:11:15: setup hooks run before providers; parameters must be context.Context or //fabrik:config structs
  help: needs a built resource? move this to //fabrik:hook start
